# backend/app/Controllers/Http/ClubsController.ts
@@ -32,6 +32,18 @@ export default class ClubsController {
     })
   }
 
+  public async publicList({ request }: HttpContext) {
+    const manager = new ClubsManager()
+
+    return await manager.publicList({
+      data: {
+        page: request.input('page'),
+        perPage: request.input('perPage'),
+        filtersBuilder: request.input('filtersBuilder'),
+      },
+    })
+  }
+
   public async store({ request }: HttpContext) {
     const manager = new ClubsManager()
 
@@ -40,18 +52,32 @@ export default class ClubsController {
         name: request.input('name'),
         completeName: request.input('completeName'),
         bio: request.input('bio'),
-        sport: request.input('sport')
+        sport: request.input('sport'),
+        public: request.input('public')
       },
     })
   }
 
-  public async show({ params }: HttpContext) {
+  public async show({ params, auth }: HttpContext) {
     const manager = new ClubsManager()
 
     return await manager.get({
       data: {
         id: params.id,
+      }
+    })
+  }
+
+  public async getByName({ request, auth }: HttpContext) {
+    const manager = new ClubsManager()
+
+    return await manager.getByName({
+      data: {
+        name: request.input('name'),
       },
+      context: {
+        user: auth.user
+      }
     })
   }
 
@@ -64,7 +90,8 @@ export default class ClubsController {
         name: request.input('name'),
         completeName: request.input('completeName'),
         bio: request.input('bio'),
-        sport: request.input('sport')
+        sport: request.input('sport'),
+        public: request.input('public')
       },
     })
   }
@@ -124,22 +151,25 @@ export default class ClubsController {
 
   public async downloadMedia({ request, params, response, auth }: HttpContext) {
     const manager = new MediaManager()
-    if (!auth.user) throw new Error('user is not defined')
 
     let club = await Club.query()
       .where('logoMediaId', params.id)
       .orWhere('headerMediaId', params.id)
       .firstOrFail()
 
-    await AuthorizationManager.canOrFail({
-      data: {
-        ability: 'club_view',
+    if(!!auth.user) {
+      await AuthorizationManager.canOrFail({
         data: {
-          club
-        },
-        actor: auth.user
-      }
-    })
+          ability: 'club_view',
+          data: {
+            club
+          },
+          actor: auth.user
+        }
+      })
+    } else if(!auth.user && !club.public) {
+      throw new Error('cannot view image')
+    }
 
     try {
       let mediaInfo = await manager.download({
